manifests/api-designer/base/ads-ui/deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: api-designer
    component: ads-ui
  name: ads-ui
spec:
  replicas: 1
  selector:
    component: ads-ui
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        component: ads-ui
      name: ads-ui
    spec:
      containers:
      - image: ads-ui:latest
        imagePullPolicy: Always
        name: ads-ui
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: "500m"
            memory: 1300Mi
          requests:
            cpu: 100m
            memory: 600Mi
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - ads-ui
      from:
        kind: ImageStreamTag
        name: ads-ui:latest
    type: ImageChange
