manifests/api-designer/base/ads-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-designer
    component: ads-ui
  name: ads-ui
spec:
  ports:
  - name: 9009-http
    port: 9009
    protocol: TCP
    targetPort: 8080
  selector:
    component: ads-ui
