manifests/api-designer/base/ads-ui/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: api-designer
    component: ads-ui
  name: ads-ui
spec:
  port:
    targetPort: 9009-http
  to:
    kind: Service
    name: ads-ui
    weight: 100
  wildcardPolicy: None
